fix users sign_in link on small screen

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -434,7 +434,10 @@
 		width: 100%;
 		height: 20%;
 	}
-
+	.test {
+		z-index: inherit;
+	}
+}
 
 /* Large Mobile :480px. */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
@@ -478,4 +481,3 @@
 		width: 78%;
 	}
 }
-
